--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
