--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^3.23.4"
   },
   "devDependencies": {
