--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.51.3",
+    "react-toastify": "^10.0.5",
     "use-places-autocomplete": "^4.0.1",
     "zod": "^3.23.4"
   },
