--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-autocomplete": "^2.7.3",
-    "react-hook-form": "^7.51.3",
-    "react-toastify": "^10.0.5",
-    "use-places-autocomplete": "^4.0.1",
-    "zod": "^3.23.4"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
